<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tippr</string>
    <string name="action_settings">Settings</string>
    <string name="tenPercent_label">10%</string>
    <string name="fifteenPercent_label">15%</string>
    <string name="twentyPercent_label">20%</string>
    <string name="notip_label">$ 0.00</string>
    <string name="total_prompt">Enter Total</string>

</resources>
