<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipperActivity" >

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:text="@string/notip_label"
        android:textAlignment="center"
        android:textSize="@dimen/tip" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTip"
        android:layout_alignRight="@+id/tvTip"
        android:layout_below="@+id/tvTip" 
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
	<Button
	    android:id="@+id/btn15"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/etSubTotal"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="17dp"
	    android:onClick="submit15Percent"
	    android:text="@string/fifteenPercent_label" />

    <Button
        android:id="@+id/btn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15"
        android:layout_alignBottom="@+id/btn15"
        android:layout_toLeftOf="@+id/btn15"
        android:onClick="submit10Percent"
        android:text="@string/tenPercent_label" />

    <Button
        android:id="@+id/btn20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15"
        android:layout_alignBottom="@+id/btn15"
        android:layout_toRightOf="@+id/btn15"
        android:onClick="submit20Percent"
        android:text="@string/twentyPercent_label" />

    <EditText
        android:id="@+id/etSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvTotal"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/total_prompt"
        android:inputType="numberDecimal" />
    
</RelativeLayout>
